--- a/.gitignore
+++ b/.gitignore
@@ -1,74 +1,75 @@
-# =========================
-# macOS
-# =========================
+# ===== Secrets / env =====
+.env
+.env.*
+!.env.example
+
+# ===== Python =====
+__pycache__/
+*.py[cod]
+*$py.class
+
+.venv/
+venv/
+env/
+ENV/
+pip-wheel-metadata/
+pip-log.txt
+pip-delete-this-directory.txt
+
+# build / dist
+build/
+dist/
+*.egg-info/
+.eggs/
+wheels/
+
+# tooling caches
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.cache/
+coverage.xml
+.coverage
+htmlcov/
+
+# Jupyter / notebooks
+.ipynb_checkpoints/
+
+# ===== Gradio / HF artifacts =====
+.gradio/
+tmp/
+*.log
+
+# ===== macOS =====
 .DS_Store
 .AppleDouble
 .LSOverride
 Icon?
 ._*
+.Spotlight-V100
+.Trashes
+.fseventsd
 
-# =========================
-# Python
-# =========================
-__pycache__/
-*.py[cod]
-*$py.class
-
-# Virtual environments
-.venv/
-venv/
-env/
-ENV/
-
-# Distribution / packaging
-build/
-dist/
-*.egg-info/
-.eggs/
-
-# Test / coverage
-.pytest_cache/
-.coverage
-htmlcov/
-
-# Logs
-*.log
-
-# =========================
-# dotenv / secrets
-# =========================
-.env
-.env.*
-!.env.example
-
-# =========================
-# IDEs
-# =========================
-
-# PyCharm
-.idea/
-
-# VSCode
-.vscode/
-
-# =========================
-# Xcode
-# =========================
-DerivedData/
-build/
-*.xcworkspace/
-*.xcuserdata/
+# ===== Xcode =====
+# User-specific settings
+xcuserdata/
+*.xcuserstate
 *.xccheckout
 *.xcscmblueprint
-*.xcodeproj/project.xcworkspace/
-*.xcodeproj/xcuserdata/
 
-# Swift Package Manager
-.build/
+# Build products
+DerivedData/
+build/
+*.ipa
+*.dSYM
+*.dSYM.zip
+*.dSYM.tar.gz
 
-# =========================
-# Hugging Face / Gradio
-# =========================
-gradio_cached_examples/
-hf_cache/
-.cache/
+# SwiftPM / Xcode integration
+.swiftpm/
+Package.resolved
+
+# Carthage / CocoaPods (если вдруг появятся)
+Carthage/Build/
+Pods/
+Podfile.lock
