--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,19 @@
-HF_TOKEN=hf_xxx
+# ================================
+# Hugging Face API configuration
+# ================================
+
+# HF_TOKEN — your personal Hugging Face token.
+# Used to access models via the HfApiModel / Inference API.
+#
+# How to get:
+# 1. Go to https://huggingface.co/settings/tokens
+# 2. Click "New token"
+# 3. Select type: "Read"
+# 4. Copy the token and paste it into .env
+#
+# IMPORTANT:
+# - Never commit .env to the repository
+# - Use .env only locally
+# - In Hugging Face Spaces, set the token in Settings → Secrets
+
+HF_TOKEN=hf_your_token_here
